# Aldbg

./: CMakeLists.txt  README.md  aldbg.glade  aldbg.ui  main.cpp
core/: Core.hpp  MemoryMap.hpp  attach.cpp  core.cpp
cpu/: cpu.cpp  cpu.h
interface/: home.hpp  style.css
interface/callstack/: CallstackView.hpp
interface/cpu/: CPUView.hpp  RegView.hpp  SymbolMenu.hpp
interface/editor/: EditorView.hpp
interface/log/: LogView.hpp
interface/memory/: MemoryView.hpp
log/: log.cpp  log.h
